--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
               <center><img src="./images/tri.png" alt="triangle" width="25%" height="auto"/></center>
               <br></br>
               <!-- Formulas -->
-              <center><h2>Formulas</h2>
-              <h3>A = [(½) b × h]</h3>
-              <h3>P = a + b + c</h3></center>
+              <center><h2>Formula</h2>
+              <h3>A = (½) (b × h)</h3></center>
         <!-- Simple Textfield -->
         <form action="#">
           <p>Base</p>
